# scores

./: .prettierrc.js  404.html  README.md  index.html  next.config.js  package.json  pyproject.toml  requirements.txt
.github/workflows/: update.yml
_next/static/R9ZzHhPjfKS4enZ46j6-x/: _buildManifest.js
components/: Brackets.tsx  Scores.tsx  TablePool.tsx  TableRankings.tsx  TableScores.tsx
data/: ncs-22-23-open-regionals-south.json  tournaments.json
data/raw/: ncs-22-23-mixed-nationals-brackets.csv  ncs-22-23-mixed-nationals-pools.csv  ncs-22-23-mixed-nationals-seeds.csv  ncs-22-23-mixed-regionals-north-brackets.csv  ncs-22-23-mixed-regionals-north-pools.csv  ncs-22-23-mixed-regionals-north-seeds.csv  ncs-22-23-mixed-regionals-south-brackets.csv  ncs-22-23-mixed-regionals-south-pools.csv  ncs-22-23-mixed-regionals-south-seeds.csv  ncs-22-23-mixed-regionals-south.csv  ncs-22-23-mixed-sectionals-sw-brackets.csv  ncs-22-23-mixed-sectionals-sw-pools.csv  ncs-22-23-mixed-sectionals-sw-seeds.csv  ncs-22-23-open-regionals-south-pools.csv  ncs-22-23-open-regionals-south-seeds.csv  ncs-22-23-women-regionals-south-pools.csv
pages/: _app.tsx  index.tsx
public/: CNAME
public/data/: ncs-22-23-mixed-nationals.json  ncs-22-23-mixed-regionals-north.json  ncs-22-23-mixed-regionals-south.json  ncs-22-23-mixed-sectionals-sw.json  ncs-22-23-open-regionals-south.json  ncs-22-23-women-regionals-south.json  tournaments.json  videos.json
scripts/: deploy-site.sh  download-data.py  parse-data.py  update-data.sh
styles/: Home.module.css  globals.css
(+4 files in other folders)
