[tool.poetry]
name = "scores"
version = "0.1.0"
description = "Site to display scores for India Ultimate tournaments"
authors = ["Puneeth Chaganti <punchagan@muse-amuse.in>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
